[package]
name = "launchwell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
dirs = "5.0.1"
open = "5.1.4"
reqwest = { version = "0.10.10", features = ["blocking"] }
select = "0.6.0"
sevenz-rust = "0.6.0"
bytes = "0.5.6"
zip = "2.1.3"
colored = "2.1.0"
tokio = "1.39.3"